# c-extension-demo

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
points_demo/: _version.py
src/: point.c
src/c_point/: Makefile  point.c
tests/: test_point_demo.py
