[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45.0",
    "wheel>=0.37.0",
]

[tool.pytest.ini_options]
junit_family= "legacy"
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::DeprecationWarning",
    # bogus numpy ABI warning (see numpy/#432)
    "ignore:.*numpy.dtype size changed.*:RuntimeWarning",
    "ignore:.*numpy.ufunc size changed.*:RuntimeWarning",
    "ignore:.*Distutils was imported before Setuptools*",
]
